tests/anon_aggregate_field_sep_comma_bad.stderr
tests/anon_aggregate_field_sep_comma_bad.sl:3:25: error: SL1004: unexpected token
