tests/anon_aggregate_field_sep_comma_bad.sl
// Verifies anonymous aggregate field sep comma is rejected.
fn main() {
    var x struct { a int, b bool } = { a: 1, b: true }
    _ = x
}
